inclusão das fonts do projeto e criação e estilização do header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header-menu">
         <nav class="menu">
-            <ul>
+            <ul class="menu">
                 <li class="logo">
                     <img src="./img/logo.svg" alt="logo">
                 </li>
@@ -30,7 +30,9 @@
                 </li>
             </ul>
         </nav>
-
     </header>
+    <main>
+        
+    </main>
 </body>
 </html>
