--- a/index.html
+++ b/index.html
@@ -56,6 +56,38 @@
             </form>
         </section>
         <hr class="linhaHr">
+        <section class="extrato">
+            <h1 class="tituloExtrato">Extrato de Transações</h1>
+                <div class="tabelaExtrato">
+                    <p class="colunaMercadoria">Mercadoria</p>
+                    <p class="colunaValor">Valor</p>
+                </div>
+                <div id="transacao1">
+                    <p class="mercadoria1"> + Lorem ipsum dolor sit amet consectetur</p>
+                    <p class="valor1">R$12.999,99</p>
+                </div>
+                <div id="transacao2">
+                    <p class="mercadoria1"> + Lorem ipsum dolor sit amet consectetur</p>
+                    <p class="valor1">R$12.999,99</p>
+                </div>
+                <div id="transacao3">
+                    <p class="mercadoria1"> + Lorem ipsum dolor sit amet consectetur</p>
+                    <p class="valor1">R$12.999,99</p>
+                </div>
+                <div id="total">
+                    <p class="mercadoriaTotal"> <strong>Total</strong></p>
+                    <p class="valorTotal"><strong>$12.999,99</strong></p>
+                </div>
+                <div id="lucroTexto"><p class="textoFinal">(Lucro)</p></div>
+                
+        </section>
+
     </main>
+    
+    <section class="footer">
+        <footer>
+
+        </footer>
+    </section>
 </body>
 </html>
