--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <img src="./img/mobile-menu.svg" > <!--abir a função do mobile menu aqui com onclick ABRIR-->
                 </li>
                 <li class="menu2">
-                    <a class="opcao" id="fecharMenu">
+                    <a class="opcao" id="mobile-fechar">
                         <img src="./img/sidebar-close-btn.svg">
                     </a>
                     <a class="opcao" href="#">Cadastro de Transação</a>
@@ -35,6 +35,7 @@
         <section class="transacao">
             <p class="textoTransacao">Nova Transação</p>
             <form class="formTransacao">
+            <div class="organiza">
                 <div class="flex tipoTransacao">
                     <label class="formLabel label" for="acaoMercadoria flex">Tipo de Transação</label>
                     <select class="selectInput acaoMercadoria cor" name="acaoMercadoria" form="acaoMercadoria">
@@ -50,6 +51,7 @@
                     <label class="formularioLabel label" for="valorInput flex">Valor</label>
                     <input type="text" name="valorInput" class="textInput valorInput cor" placeholder="  R$ 0,00">
                 </div>
+            </div>
                 <div class="flex botao">
                     <input class="btnSubmit" type="submit" value="Adicionar Transação">
                 </div>
