finalizando responsivo do 768px media

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </div>
             </div>
                 <div class="flex botao">
-                    <input class="btnSubmit" type="submit" value="Adicionar Transação">
+                    <input class="btnSubmit" id="botaoSubmit" type="submit" value="Adicionar Transação">
                 </div>
             </form>
         </section>
@@ -61,8 +61,8 @@
         <section class="extrato">
             <h1 class="tituloExtrato">Extrato de Transações</h1>
                 <div class="tabelaExtrato">
-                    <p class="colunaMercadoria">Mercadoria</p>
-                    <p class="colunaValor">Valor</p>
+                    <p class="colunaMercadoria"><strong>Mercadoria</strong></p>
+                    <p class="colunaValor"><strong>Valor</strong></p>
                 </div>
                 <div id="transacao1">
                     <p class="mercadoria1"> + Lorem ipsum dolor sit amet consectetur</p>
