finalizando o responsivo de 1112px

--- a/index.html
+++ b/index.html
@@ -22,11 +22,15 @@
                     <img src="./img/mobile-menu.svg" > <!--abir a função do mobile menu aqui com onclick ABRIR-->
                 </li>
                 <li class="menu2">
+                <div class="menu2-img">
                     <a class="opcao" id="mobile-fechar">
                         <img src="./img/sidebar-close-btn.svg">
                     </a>
-                    <a class="opcao" href="#">Cadastro de Transação</a>
-                    <a class="opcao" href="#">Limpar Dados</a>
+                </div>
+                <div class="menu-opcao">
+                    <a class="opcao" id="colorMob1" href="#">Cadastro de Transação</a>
+                    <a class="opcao" id="colorMob2" href="#">Limpar Dados</a>
+                </div>
                 </li>
             </ul>
         </nav>
