iniciando a validacao do form e estruturando a past js

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
                 </div>
                 <div class="flex mercadoria">
                     <label class="formularioLabel label" for="nomeMercadoria flex">Nome da Mercadoria</label>
-                    <input type="text" name="nomeMercadoria" class="textInput nomeMercadoria cor" placeholder="  Smartphone">
+                    <input type="text" name="nomeMercadoria" class="textInput nomeMercadoria cor" placeholder="  Smartphone" required>
                 </div>
                 <div class="flex valor">
                     <label class="formularioLabel label" for="valorInput flex">Valor</label>
-                    <input type="text" name="valorInput" class="textInput valorInput cor" placeholder="  R$ 0,00">
+                    <input type="text" name="valorInput" class="textInput valorInput cor" placeholder="  R$ 0,00" required>
                 </div>
             </div>
                 <div class="flex botao">
@@ -95,5 +95,6 @@
 
         </footer>
     </section>
+    <script src="./js/index.js"></script>
 </body>
 </html>
