--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
     <main>
         <section class="transacao">
             <p class="textoTransacao">Nova Transação</p>
-            <form class="formTransacao" id="form" name="formulario">
+            <form class="formTransacao" id="form" name="formulario" onsubmit="validarForm(event)">
             <div class="organiza">
                 <div class="flex tipoTransacao">
                     <label class="formLabel label" for="acaoMercadoria flex">Tipo de Transação</label>
-                    <select class="selectInput acaoMercadoria cor" name="acaoMercadoria" form="acaoMercadoria">
+                    <select class="selectInput acaoMercadoria cor" id="opcao" name="acaoMercadoria" form="acaoMercadoria">
                         <option value="compra">Compra</option>
                         <option value="venda">Venda</option>
                     </select>
@@ -53,11 +53,11 @@
                 </div>
                 <div class="flex valor">
                     <label class="formularioLabel label" for="valorInput flex">Valor</label>
-                    <input type="text" name="valorInput" class="textInput valorInput cor" placeholder="  R$ 0,00" required>
+                    <input type="text" name="valorInput" id="valor" class="textInput valorInput cor" placeholder="  R$ 0,00">
                 </div>
             </div>
                 <div class="flex botao">
-                    <button class="btnSubmit" id="botaoSubmit" type="submit" onclick="validarForm">Adicionar Transação</button>
+                    <button class="btnSubmit" id="botaoSubmit" type="submit" >Adicionar Transação</button>
                 </div>
             </form>
         </section>
