reajustando para fazer em sentido lógico

--- a/index.html
+++ b/index.html
@@ -70,28 +70,13 @@
         <hr class="linhaHr">
         <section class="extrato">
             <h1 class="tituloExtrato">Extrato de Transações</h1>
-            <div class="tabelaExtrato">
-                <p class="colunaMercadoria"><strong>Mercadoria</strong></p>
-                <p class="colunaValor"><strong>Valor</strong></p>
-            </div>
-            <div id="transacao1">
-                <p class="mercadoria1"> + Lorem ipsum dolor sit amet consectetur</p>
-                <p class="valor1">R$12.999,99</p>
-            </div>
-            <div id="transacao2">
-                <p class="mercadoria1"> + Lorem ipsum dolor sit amet consectetur</p>
-                <p class="valor1">R$12.999,99</p>
-            </div>
-            <div id="transacao3">
-                <p class="mercadoria1"> + Lorem ipsum dolor sit amet consectetur</p>
-                <p class="valor1">R$12.999,99</p>
-            </div>
-            <div id="total">
-                <p class="mercadoriaTotal"> <strong>Total</strong></p>
-                <p class="valorTotal"><strong>$12.999,99</strong></p>
-            </div>
-            <div id="lucroTexto">
-                <p class="textoFinal">(Lucro)</p>
+        <div class="tabelaExtrato">
+            <table class="lista">
+                <tr class="trDestaque">
+                    <th class="colunaMercadoria"> <strong>Mercadoria</strong></th>
+                    <th class="colunaValor"><strong>Valor</strong></th>
+                </tr>
+              </table>
             </div>
 
         </section>
@@ -104,6 +89,7 @@
         </footer>
     </section>
     <script src="./js/validacaoForm.js"></script>
+    <script src="./js/main.js"></script>
 
 </body>
 
