prosseguindo com Js e fazendo ajustes no html

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
             <h1 class="tituloExtrato">Extrato de Transações</h1>
         <div class="tabelaExtrato">
             <table class="lista">
-                <tr class="trDestaque">
-                    <th class="colunaMercadoria"> <strong>Mercadoria</strong></th>
-                    <th class="colunaValor"><strong>Valor</strong></th>
+                <tr>
+                    <td class="colunaMercadoria"> <strong>Mercadoria</strong></td>
+                    <td class="colunaValor"><strong>Valor</strong></td>
                 </tr>
               </table>
             </div>
