ajustes no css dos botaos de transacao

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </div>
                     <div class="menu-opcao">
                         <a class="opcao" id="colorMob1" href="#">Cadastro de Transação</a>
-                        <a class="opcao" id="colorMob2" href="#">Limpar Dados</a>
+                        <a class="opcao" onclick="limparTransacao()" id="colorMob2">Limpar Dados</a>
                     </div>
                 </li>
             </ul>
