variavel para não permitir usuario colocar colado algo valor nocampo de valor

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     </div>
                     <div class="flex valor">
                         <label class="formularioLabel label" for="valorInput flex">Valor</label>
-                        <input type="text" name="valorInput" id="valor" onfocus="this.value = ''"
+                        <input type="text" name="valorInput" autocomplete="off" id="valor" onfocus="this.value = ''"
                             onkeypress="testarCampoValor(event)" class="textInput valorInput cor"
                             placeholder="  R$ 0,00" required>
                     </div>
